# MadMP3Decoder

./: .gitmodules  CMakeLists.txt  MadMP3Dec.c  MadMP3Dec.h  README.md  mad_mp3dec.c  mad_mp3dec.h
test/: CMakeLists.txt  test.c
